--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
+
+
+
 <!DOCTYPE html>
 <html lang="uk">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -15,5 +20,6 @@
   <body>
     <noscript>Для коректного функціонування веб-сайту Вам потрібно дозволити JavaScript в своєму браузері.</noscript>
     <div id="root"></div>
+
   </body>
 </html>
