--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,28 @@
-
-
-
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Стріткод - це найбільша платформа про історію України, вбудована в простори міст. Ми створюємо соціальний проєкт, який працюватиме на інформаційну безпеку України. Пропонуємо інструмент для посилення української ідентичності через неформальну освіту. Будуємо ком'юніті експертів."
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Стріткод | Історія на кожному кроці</title>
-  </head>
-  <body>
-    <noscript>Для коректного функціонування веб-сайту Вам потрібно дозволити JavaScript в своєму браузері.</noscript>
-    <div id="root"></div>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta
+          name="description"
+          content="Стріткод - це найбільша платформа про історію України, вбудована в простори міст.
+      Ми створюємо соціальний проєкт, який працюватиме на інформаційну безпеку України.
+      Пропонуємо інструмент для посилення української ідентичності через неформальну освіту.
+      Будуємо ком'юніті експертів."
+  />
+  <link rel="manifest" href="manifest.json" />
+  <title>Стріткод | Історія на кожному кроці</title>
 
-  </body>
+  <!--Slick-Slider cdn dependencies-->
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+</head>
+<body>
+<noscript>Для коректного функціонування веб-сайту Вам потрібно дозволити JavaScript в своєму браузері.</noscript>
+<div id="root"></div>
+</body>
 </html>
