Fixed styling bugs.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       Пропонуємо інструмент для посилення української ідентичності через неформальну освіту.
       Будуємо ком'юніті експертів."
   />
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/manifest.json" />
   <title>Стріткод | Історія на кожному кроці</title>
 
   <!--Slick-Slider cdn dependencies-->
