--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,14 @@
   />
   <link rel="manifest" href="/manifest.json" />
   <title>Стріткод | Історія на кожному кроці</title>
-
   <!--Slick-Slider cdn dependencies-->
   <link rel="stylesheet" type="text/css" charset="UTF-8"
         href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
   <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+
+        <script src="https://cdn.tiny.cloud/1/8orzv8u2ay8ccowdk5xnlgwzumtgiebf0sio35i8lqk0jbe9/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
 </head>
 <body>
 <noscript>Для коректного функціонування веб-сайту Вам потрібно дозволити JavaScript в своєму браузері.</noscript>
