--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,15 @@
         
 
         <script src="https://cdn.tiny.cloud/1/8orzv8u2ay8ccowdk5xnlgwzumtgiebf0sio35i8lqk0jbe9/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-2RHY04JKG0"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-2RHY04JKG0');
+      </script>
 </head>
 <body>
 <noscript>Для коректного функціонування веб-сайту Вам потрібно дозволити JavaScript в своєму браузері.</noscript>
