--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
       <!-- Google tag (gtag.js) -->
             <script async src="https://www.googletagmanager.com/gtag/js?id=G-2RHY04JKG0"></script>
             <script>
+            window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
