--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,13 @@
             referrerpolicy="origin"></script>
 
       <!-- Google tag (gtag.js) -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVK18CM1VZ"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBJQX1FFF0"></script>
       <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() { dataLayer.push(arguments); }
             gtag('js', new Date());
 
-            gtag('config', 'G-CVK18CM1VZ');
+            gtag('config', 'G-EBJQX1FFF0');
       </script>
 </head>
 
