--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
 <body>
       <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T9ZHBQ5T" height="0" width="0"
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=" + window._env_.REACT_APP_GOOGLE_ANALYTICS height="0" width="0"
                   style="display:none;visibility:hidden"></iframe></noscript>
       <!-- End Google Tag Manager (noscript) -->
       <noscript>Для коректного функціонування веб-сайту Вам потрібно дозволити JavaScript в своєму браузері.</noscript>
