--- a/public/index.html
+++ b/public/index.html
@@ -40,20 +40,20 @@
 
       <!-- Google tag (gtag.js) -->
 
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBJQX1FFF0"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id="+window._env_.REACT_APP_GOOGLE_ANALYTICS></script>
       <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() { dataLayer.push(arguments); }
             gtag('js', new Date());
 
 
-            gtag('config', 'G-EBJQX1FFF0');
+            gtag('config', window._env_.REACT_APP_GOOGLE_ANALYTICS);
       </script>
 </head>
 
 <body>
       <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=" + window._env_.REACT_APP_GOOGLE_ANALYTICS height="0" width="0"
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T9ZHBQ5T" height="0" width="0"
                   style="display:none;visibility:hidden"></iframe></noscript>
       <!-- End Google Tag Manager (noscript) -->
       <noscript>Для коректного функціонування веб-сайту Вам потрібно дозволити JavaScript в своєму браузері.</noscript>
