fix preview on main page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <meta
               data-react-helmet="true"
               property="og:image"
-              content='/banner.webp'
+              content='https://imageupload.io/ib/FxPYSMIqLgKs1u6_1698303095.webp'
       />
       <meta property="og:image:width" content="3202" data-react-helmet="true" />
       <meta property="og:image:height" content="1472" data-react-helmet="true" />
