--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
       <link rel="icon" href="favicon.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
-      <meta property='og:title' content="«Стріткод: історія на кожному кроці» — платформа про імена в назвах вулиць." data-react-helmet="true" />
-      <meta property='og:description' content="" data-react-helmet="true" />
-      <meta name="twitter:card" content="«Стріткод: історія на кожному кроці»" data-react-helmet="true" />
+      <meta property='og:title' content="__PAGE_TITLE__" data-react-helmet="true" />
+      <meta property='og:description' content="__PAGE_DESCRIPTION__" data-react-helmet="true" />
+      <meta name="twitter:card" content="__PAGE_DESCRIPTION__" data-react-helmet="true" />
       <meta
               data-react-helmet="true"
               property="og:image"
-              content='/banner.webp'
+              content='__PAGE_IMAGE__'
       />
-      <meta property="og:image:width" content="3202" data-react-helmet="true" />
-      <meta property="og:image:height" content="1472" data-react-helmet="true" />
+<!--      <meta property="og:image:width" content="3202" data-react-helmet="true" />-->
+<!--      <meta property="og:image:height" content="1472" data-react-helmet="true" />-->
       <!-- Google Tag Manager -->
       <script>(function (w, d, s, l, i) {
                   w[l] = w[l] || []; w[l].push({
@@ -28,7 +28,7 @@
             })(window, document, 'script', 'dataLayer', 'GTM-T9ZHBQ5T');</script>
       <!-- End Google Tag Manager -->
       <link rel="manifest" href="/manifest.json" />
-      <title>Стріткод | Історія на кожному кроці</title>
+      <title>__PAGE_TITLE__</title>
       <!--Slick-Slider cdn dependencies-->
       <link rel="stylesheet" type="text/css" charset="UTF-8"
             href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
