--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,15 @@
       <link rel="icon" href="favicon.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
-      <meta property='og:title' content="«Стріткод: історія на кожному кроці» — платформа про імена в назвах вулиць." data-react-helmet="true" />
-      <meta property='og:description' content="" data-react-helmet="true" />
-      <meta name="twitter:card" content="«Стріткод: історія на кожному кроці»" data-react-helmet="true" />
-      <meta
-              data-react-helmet="true"
-              property="og:image"
-              content='/banner.webp'
-      />
-      <meta property="og:image:width" content="3202" data-react-helmet="true" />
-      <meta property="og:image:height" content="1472" data-react-helmet="true" />
+      <meta property='og:title' content="«Стріткод: історія на кожному кроці» — платформа про імена в назвах вулиць." />
+      <meta property='og:description' content="" />
+      <meta name="twitter:card" content="«Стріткод: історія на кожному кроці»" />
+      <meta property="og:image" content='https://oleh-kril.github.io/Todo/banner.webp' />
+      <meta property="og:image:width" content="3202" />
+      <meta property="og:image:height" content="1472" />
       <!-- Google Tag Manager -->
       <script>(function (w, d, s, l, i) {
-                  w[l] = w[l] || []; w[l].push({
+            https://github.com/w[l] = w[l] || []; w[l].push({
                         'gtm.start':
                               new Date().getTime(), event: 'gtm.js'
                   }); var f = d.getElementsByTagName(s)[0],
