--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,10 @@
       <link rel="icon" href="favicon.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
-      <meta property='og:title' content="__PAGE_TITLE__" data-react-helmet="true" />
-      <meta property='og:description' content="__PAGE_DESCRIPTION__" data-react-helmet="true" />
-      <meta name="twitter:card" content="__PAGE_DESCRIPTION__" data-react-helmet="true" />
-      <meta
-              data-react-helmet="true"
-              property="og:image"
-              content='__PAGE_IMAGE__'
-      />
-<!--      <meta property="og:image:width" content="3202" data-react-helmet="true" />-->
-<!--      <meta property="og:image:height" content="1472" data-react-helmet="true" />-->
+      <meta property='og:title' content="__PAGE_TITLE__" />
+      <meta property='og:description' content="__PAGE_DESCRIPTION__" />
+      <meta name="twitter:card" content="__PAGE_DESCRIPTION__" />
+      <meta property="og:image" content='__PAGE_IMAGE__' />
       <!-- Google Tag Manager -->
       <script>(function (w, d, s, l, i) {
             https://github.com/w[l] = w[l] || []; w[l].push({
