Change route constants for authentication/authorization

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <meta property="og:image" content='__PAGE_IMAGE__' />
       <!-- Google Tag Manager -->
       <script>(function (w, d, s, l, i) {
-            https://github.com/w[l] = w[l] || []; w[l].push({
+            w[l] = w[l] || []; w[l].push({
                         'gtm.start':
                               new Date().getTime(), event: 'gtm.js'
                   }); var f = d.getElementsByTagName(s)[0],
