--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
       <script src="/env-config.js"></script>
       <meta charset="utf-8" />
       <link rel="icon" href="favicon.ico" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
       <meta name="theme-color" content="#000000" />
       <meta property='og:title' content="__PAGE_TITLE__" />
       <meta property='og:description' content="__PAGE_DESCRIPTION__" />
@@ -13,7 +13,8 @@
       <meta property="og:image" content='__PAGE_IMAGE__' />
       <!-- Google Tag Manager -->
       <script>(function (w, d, s, l, i) {
-            https://github.com/w[l] = w[l] || []; w[l].push({
+            https://github.com/w[l] = w[l] || []; w[l].push 
+            ({
                         'gtm.start':
                               new Date().getTime(), event: 'gtm.js'
                   }); var f = d.getElementsByTagName(s)[0],
