--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <meta property='og:title' content="«Стріткод: історія на кожному кроці» — платформа про імена в назвах вулиць." />
       <meta property='og:description' content="" />
       <meta name="twitter:card" content="«Стріткод: історія на кожному кроці»" />
-      <meta property="og:image" content='https://oleh-kril.github.io/Todo/banner.webp' />
+      <meta property="og:image" content='https://ita-social-projects.github.io/StreetCode_Client/public/banner.webp' />
       <meta property="og:image:width" content="3202" />
       <meta property="og:image:height" content="1472" />
       <!-- Google Tag Manager -->
