--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
       <script src="/env-config.js"></script>
       <meta charset="utf-8" />
       <link rel="icon" href="favicon.ico" />
+      <meta http-equiv="Cache-Control" content="max-age=0" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
       <meta name="theme-color" content="#000000" />
       <meta property='og:title' content="«Стріткод: історія на кожному кроці» — платформа про імена в назвах вулиць." />
